Fixed spacing issues with the websites navigation

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ header {
   background-color: var(--shark-50);
   display: flex;
   align-items: center;
+  gap: 1rem;
   padding: 1rem 2rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
@@ -49,7 +50,7 @@ header {
 .navigation-list {
   display: flex;
   list-style: none;
-  gap: 1rem;
+  gap: 0.5rem;
   margin: 0;
   padding: 0;
 }
